--- a/app/views/maps/edit.html.erb
+++ b/app/views/maps/edit.html.erb
@@ -10,3 +10,74 @@
   <%= f.text_field :comment %>
   <%= f.submit "保存" %>
   <% end %>
+  
+  <script>
+  let map
+  let geocoder
+  // 変数を追加
+  let marker
+
+  function initMap() {
+    geocoder = new google.maps.Geocoder()
+
+    // 変数の名前をmapInstanceに変更、デフォルト位置を東京に変更
+    mapInstance = new google.maps.Map(document.getElementById('map'), {
+      center: {
+        lat: 35.681,
+        lng: 139.767
+      },
+      zoom: 8
+    });
+
+    // 保存された地図情報からピンをさす
+    <% @maps.each do |map| %>
+    // google.maps.LatLngインスタンスを生成
+    pos = new google.maps.LatLng(
+    <%=map.latitude%>, //latitude
+    <%=map.longitude%> //longitude
+    );
+    default_marker = new google.maps.Marker({
+    map: mapInstance,
+    position: pos,
+    icon: {
+    url: ' https://maps.google.com/mapfiles/ms/icons/green-dot.png', //アイコンのURL
+    scaledSize: new google.maps.Size(40, 40) //サイズ
+    }
+    });
+    <% end %>
+  }
+
+  function codeAddress() {
+    let inputAddress = document.getElementById('address').value;
+
+    geocoder.geocode({
+      'address': inputAddress
+    }, function (results, status) {
+      if (status == 'OK') {
+        // map→mapInstanceに変更
+        mapInstance.setCenter(results[0].geometry.location);
+
+        // 既存の検索マーカーを削除
+        if(marker != null){
+        marker.setMap(null);
+        }
+        marker = null;
+
+        // var marker → markerへ変更
+        marker = new google.maps.Marker({
+          //map→mapInstanceに変更
+          map: mapInstance,
+          position: results[0].geometry.location
+        });
+
+        let title = document.getElementById('map_title');
+        title.setAttribute("value", inputAddress);
+
+        let hidden_address = document.getElementById('hidden_address');
+        hidden_address.setAttribute("value", inputAddress);
+      } else {
+        alert('Geocode was not successful for the following reason: ' + status);
+      }
+    });
+  }
+</script>
