--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,7 @@
       <%= link_to 'Hona!', root_path, class: "logo" %>
        <ul class="flex">
         <% if user_signed_in? %>
+          <li><%= link_to ' 口コミマップ', maps_path, class: "btn btn-default" %></li>
           <li><%= link_to ' マイページ', user_path(current_user), class: "btn btn-default" %></li>
           <li><%= link_to ' ログアウト', destroy_user_session_path, method: :delete, class: "btn btn-default" %></li>
         <% else %>
