--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -1,7 +1,12 @@
 <h1>詳細画面</h1>
 
-<div><%= @map.title%></div>
-<div><%= @map.comment%></div>
 
+<h2><%= @map.spotname %></h2>
+<div><%= @map.title %></div>
+<div><%= @map.comment %></div>
+<tr><%= attachment_image_tag(@map, :image, :fill, 100, 100, fallback: "no_image.jpg") %></tr>
+
+
+<td><%= link_to "口コミマップに戻る", maps_path %></td>
 <td><%= link_to "編集", edit_map_path(@map) %></td>
 <td><%= link_to "削除", map_path(@map), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %></td>
