--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -16,7 +16,7 @@
   <%= f.text_area :comment %>
   <%= f.label :image, "写真" %>
   <%= f.attachment_field :image %>
-  <%= f.submit "保存" %>
+  <%= f.submit "口コミを投稿する" %>
   <% end %>
 
 
