changed content of Map

--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -10,20 +10,21 @@
   <input type="hidden" name="map[address]" id="hidden_address">
   <%= f.label :spotname, "スポット名" %>
   <%= f.text_field :spotname %>
-  <%= f.label :title, "タイトル" %>
-  <%= f.text_field :title %>
-  <%= f.label :comment, "コメント" %>
-  <%= f.text_area :comment %>
-  <%= f.label :image, "写真" %>
-  <%= f.attachment_field :image %>
-  <%= f.submit "口コミを投稿する" %>
+  <%#= form_with model: @comment, url: map_comments_path, method: :get, local:true do |f| %>
+  <%#= f.label :title, "タイトル" %>
+  <%#= f.text_field :title %>
+  <%#= f.label :comment, "コメント" %>
+  <%#= f.text_area :comment %>
+  <%#= f.label :image, "写真" %>
+  <%#= f.attachment_field :image %>
+  <%= f.submit "新たなスポットを登録する" %>
   <% end %>
 
 
   <div id='map'>
   </div>
   <!--オススメで表示させる？-->
-  <%= render @maps %>
+  <%#= render @maps %>
 </div>
 
 <script>
