--- a/app/views/maps/_favorite.html.erb
+++ b/app/views/maps/_favorite.html.erb
@@ -1,11 +1,11 @@
       <% if map.favorited_by?(current_user) %>
-         <%= link_to map_favorites_path(map), data: {"turbolinks" => false}, method: :delete, remote: true do  %>
+         <%= link_to map_favorites_path(map), method: :delete, remote: true do  %>
           <i class="fa fa-heart"></i>
         <% end %>
 
        <% else %>
 
-         <%= link_to map_favorites_path(map), data: {"turbolinks" => false}, method: :post, remote: true do %>
+         <%= link_to map_favorites_path(map), method: :post, remote: true do %>
           <i class="fa fa-heart-o"></i>
          <% end %>
         <% end %>
