--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
           <li><%= link_to ' マイページ', user_path(current_user), class: "btn btn-default" %></li>
           <li><%= link_to ' ログアウト', destroy_user_session_path, method: :delete, class: "btn btn-default" %></li>
         <% else %>
+        　<li><%= link_to ' 口コミマップ', maps_path, class: "btn btn-default" %></li>
           <li><%= link_to ' ログイン', new_user_session_path, class: "btn btn-default"%></li>
         <% end %>
         </ul>
