--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,16 @@
    <header>
      <div class="header-content">
       <%= link_to 'Hona!', root_path, class: "logo" %>
+
+      <div class="spot_search">
+        <%= form_with url: search_maps_path, method: :get, local: true do |f| %>
+        <%= f.text_field :search, class: 'form-control', placeholder: "スポット検索"  %>
+        <%= f.button :type => "submit" do %>
+      <i class="fas fa-search"></i>
+    <% end %>
+  <% end %>
+      </div>
+
        <ul class="flex">
         <% if user_signed_in? %>
           <li><%= link_to ' 口コミマップ', maps_path, class: "btn btn-default" %></li>
