--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,13 +2,13 @@
      <div class="header-content">
       <%= link_to 'Hona!', root_path, class: "logo" %>
 
-      <div class="spot_search">
-        <%= form_with url: search_maps_path, method: :get, local: true do |f| %>
-        <%= f.text_field :search, class: 'form-control', placeholder: "スポット検索"  %>
-        <%= f.button :type => "submit" do %>
-      <i class="fas fa-search"></i>
-    <% end %>
-  <% end %>
+  <!--    <div class="spot_search">-->
+  <!--      <%#= form_with url: search_maps_path, method: :get, local: true do |f| %>-->
+  <!--      <%#= f.text_field :search, class: 'form-control', placeholder: "スポット検索"  %>-->
+  <!--      <%#= f.button :type => "submit" do %>-->
+  <!--    <i class="fas fa-search"></i>-->
+  <!--  <%# end %>-->
+  <!--<%# end %>-->
       </div>
 
        <ul class="flex">
