Updated Users info

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,12 +16,12 @@
 	<!-- エラーメッセージ表示-->
 
 	<div class="field">
-		<%= f.label :name %>
+		<%= t('.name') %>
 		<%= f.text_field :name, class: "name" %>
 	</div>
 
 	<div class="field">
-		<%= f.label :image %>
+		<%= t('.image') %>
 		<%= f.attachment_field :profile_image %>
 	</div>
 
