--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,19 +3,14 @@
 <table class="table">
 	<tr><%= attachment_image_tag(@user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %></tr>
 
- 	<tr>
-		<th>名前</th>
-		<th><%= @user.name %></th>
-	</tr>
-
 	<tr>
-		<th>ユーザーネーム</th>
+		<th><%= t('.username') %></th>
 		<th><%= @user.nickname %></th>
 	</tr>
 
 	<tr>
-		<th>国</th>
-		<th><%= @user.country %></th>
+		<th><%= t('.country') %></th>
+		<th><%= @user.country_name %></th>
   </tr>
 
 </table>
