--- a/app/views/maps/top.html.erb
+++ b/app/views/maps/top.html.erb
@@ -1,6 +1,6 @@
 <h1>Topページ</h1>
 
-<%= link_to "gmap", maps_path %>
+<%= link_to t('.information'), maps_path %>
 
 <h3>いいねの多いスポット</h3>
 <% @all_ranks.each do |map| %>
