--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,25 +1,34 @@
-   <header>
-     <div class="header-content">
-      <%= link_to 'Hona!', root_path, class: "logo" %>
+ <header>
 
-  <!--    <div class="spot_search">-->
-  <!--      <%#= form_with url: search_maps_path, method: :get, local: true do |f| %>-->
-  <!--      <%#= f.text_field :search, class: 'form-control', placeholder: "スポット検索"  %>-->
-  <!--      <%#= f.button :type => "submit" do %>-->
-  <!--    <i class="fas fa-search"></i>-->
-  <!--  <%# end %>-->
-  <!--<%# end %>-->
+   <% if user_signed_in? %>
+     <nav>
+       <ul class="nav-list">
+          <li class="nav-list-item"><%= link_to ' 口コミマップ', maps_path, class: "btn btn-default" %></li>
+          <li class="nav-list-item"><%= link_to ' マイページ', user_path(current_user), class: "btn btn-default" %></li>
+          <li class="nav-list-item"><%= link_to ' ログアウト', destroy_user_session_path, method: :delete, class: "btn btn-default" %></li>
+        </ul>
+      </nav>
+
+        <% else %>
+      <nav>
+       <ul class="nav-list">
+        　<li class="nav-list-item"><%= link_to ' 口コミマップ', maps_path, class: "btn btn-default" %></li>
+          <li class="nav-list-item"><%= link_to ' ログイン', new_user_session_path, class: "btn btn-default"%></li>
+        </ul>
+      </nav>
+  <% end %>
+
+    <div class="header-content">
+      <%= link_to image_tag("logo.png", style: "width: 200px; height: 200px;"), root_path, class: "logo" %>
       </div>
 
-       <ul class="flex">
-        <% if user_signed_in? %>
-          <li><%= link_to ' 口コミマップ', maps_path, class: "btn btn-default" %></li>
-          <li><%= link_to ' マイページ', user_path(current_user), class: "btn btn-default" %></li>
-          <li><%= link_to ' ログアウト', destroy_user_session_path, method: :delete, class: "btn btn-default" %></li>
-        <% else %>
-        　<li><%= link_to ' 口コミマップ', maps_path, class: "btn btn-default" %></li>
-          <li><%= link_to ' ログイン', new_user_session_path, class: "btn btn-default"%></li>
-        <% end %>
-        </ul>
-  　</div>
+       <div class="search-form">
+           <%= form_with url: search_path, method: :get, local: true do |f| %>
+            <%= f.label :model, "スポットを探す" %>
+            <%= f.text_field :content %>
+            <%= f.select :method, options_for_select({ "完全一致" => "perfect", "前方一致" => "forward", "後方一致" => "backward", "部分一致" => "partial" }) %>
+            <%= f.submit '検索' %>
+           <% end %>
+       </div>
+
   </header>
