--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -1,91 +1,77 @@
-<h1>詳細画面</h1>
-<td><%= link_to "口コミマップに戻る", maps_path %></td>
-
-<h1><%= @map.spotname %></h1>
-<div class="average-star-rate<%= @avarage_star %>"></div>
-<div><% if @comments.present? %>
-<%= @comments.count %>件の評価中<%= @average_star %>点</div>
-<script>
-  $('.average-star-rate<%= @avarage_star %>').raty({
-    size      : 25,
-    starOff   : '<%= asset_path('star-off.png') %>',
-    starOn    : '<%= asset_path('star-on.png') %>',
-    starHalf  : '<%= asset_path('star-half.png') %>',
-    readOnly: true,
-    score: <%= @average_star %>,
-  });
-</script>
-<% else%>
-<p>まだ口コミはありません</p>
-<% end %>
+<div class="container">
+  <div class="row">
 
 
-   <% if user_signed_in? %>
-   <div id="like_<%= @map.id %>">
-     <%= render "maps/favorite", map: @map %>
-	</div>
-	  <% else %>
-	  <%= link_to "", new_user_session_path, class: "fa fa-heart-o" %>
-  <% end %>
 
-	<h5>スポットの編集</h5>
-<td><%= link_to "編集", edit_map_path(@map) %></td>
-<td><%= link_to "削除", map_path(@map), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %></td>
+    <div class='col-xs-9'>
+        <h1><%= @map.spotname %></h1>
+          <div class="average-star-rate<%= @avarage_star %>"></div>
+           <div><% if @comments.present? %>
+            <%= @comments.count %>件の評価中<%= @average_star %>点</div>
+         <script>
+         $('.average-star-rate<%= @avarage_star %>').raty({
+           size      : 25,
+           starOff   : '<%= asset_path('star-off.png') %>',
+           starOn    : '<%= asset_path('star-on.png') %>',
+           starHalf  : '<%= asset_path('star-half.png') %>',
+           readOnly: true,
+           score: <%= @average_star %>,
+          });
+         </script>
+           <% else%>
+          <p>まだ口コミはありません</p>
+           <% end %>
 
+            <!--いいねボタン-->
+             <% if user_signed_in? %>
+             <div id="like_<%= @map.id %>">
+               <%= render "maps/favorite", map: @map %>
+          	</div>
+          	  <% else %>
+          	  <%= link_to "", new_user_session_path, class: "fa fa-heart-o" %>
+            <% end %>
 
-<% @map.comments.each do |comment| %>
-
-<h3><%= comment.title %></h3>
- <p>評価 :<%= comment.star %>点</p>
- <div id="star-rate<%= comment.id %>"></div>
-<div><%= comment.comment %></div>
-<div><%= attachment_image_tag(comment, :image, :fill, 100, 100 ) %></div>
-<div><%#= link_to comment.user_id.nickname, user_path(@user.id) %>さんが投稿しました。</div>
-<div><%= comment.created_at %></div>
-<script>
-      $('#star-rate<%= comment.id %>').raty({
-        size      : 25,
-        starOff   : '<%= asset_path('star-off.png') %>',
-        starOn    : '<%= asset_path('star-on.png') %>',
-        half      : false,
-        readOnly: true,
-        score: <%= comment.star %>,
-      });
-    </script>
-    <td><%= link_to "削除", map_comment_path(comment.map_id, comment.id), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %></td>
-
-
-<% end %>
+          　<!--管理者のみ可能にしたい-->
+          	<!--<h5>スポットの編集</h5>-->
+            <td><%#= link_to "編集", edit_map_path(@map) %></td>
+            <td><%#= link_to "削除", map_path(@map), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %></td>
 
 
-<h4>新規口コミ投稿</h4>
-<%#= render 'maps/post', map: @map_new %>
-<% if user_signed_in? %>
-<%= form_with model: [@map,@comment], local:true do |f| %>
-  <%= f.label :title, "タイトル" %>
-  <%= f.text_field :title %>
-  <%= f.label :comment, "コメント" %>
-  <%= f.text_area :comment %>
-  <%= f.label :image, "写真(なくても投稿できます）" %>
-  <%= f.attachment_field :image %>
-  <div class="form-group row" id="star">
-    <%= f.label :star,'評価 ', class:'col-md-3 col-form-label' %>
-    <%= f.hidden_field :star, id: :review_star %>
-  </div>
-  <%= f.submit "送信" %>
-  <!-- 評価javascript -->
-  <script>
-  $('#star').raty({
-    size     : 36,
-    starOff:  '<%= asset_path('star-off.png') %>',
-    starOn : '<%= asset_path('star-on.png') %>',
+            <% @comments.each do |comment| %>
 
-    scoreName: 'comment[star]',
-    half: false,
-  });
-  </script>
-  <% end %>
-   <% else %>
-  <div>口コミ投稿は会員の方のみができます</div>
-  <% end %>
+            <h3><%= comment.title %></h3>
+             <p>評価 :<%= comment.star %>点</p>
+             <div id="star-rate<%= comment.id %>"></div>
+            <div><%= comment.comment %></div>
+            <div><%= attachment_image_tag(comment, :image, :fill, 100, 100 ) %></div>
+            <div><%= link_to comment.user.nickname, user_path(comment.user.id) %>さんが投稿しました。</div>
+            <div><%= comment.created_at %></div>
+            <script>
+                  $('#star-rate<%= comment.id %>').raty({
+                    size      : 25,
+                    starOff   : '<%= asset_path('star-off.png') %>',
+                    starOn    : '<%= asset_path('star-on.png') %>',
+                    half      : false,
+                    readOnly: true,
+                    score: <%= comment.star %>,
+                  });
+                </script>
+                <% if comment.user_id == current_user.id %>
+                <td><%= link_to "削除", map_comment_path(comment.map_id, comment.id), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %></td>
+                <% end %>
+            <% end %>
 
+            <%= paginate @comments %>
+
+            </div>
+
+        <div class='col-xs-3'>
+          <div class="commentnew">
+
+        <h4>新規口コミ投稿</h4>
+        <%= render 'maps/form', map: @map, comment: Comment.new %>
+        <h6><%= link_to "口コミマップに戻る", maps_path %></h6>
+          </div>
+        </div>
+    </div>
+</div>
