--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,9 @@
-<h3>マイページ</h3>
+<% if @user == current_user %>
+	<h3>マイページ</h3>
+<% else %>
+    <h3><%= @user.name %>さんのページ</h3>
+<% end %>
+
 
 <table class="table">
 	<tr><%= attachment_image_tag(@user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %></tr>
@@ -15,11 +20,10 @@
 
 </table>
 
-<%= link_to "マイページ編集", edit_user_path(@user.id) %>
-<%#= link_to "投稿一覧", edit_user_path(@user.id) %>
-<%= link_to "いいねしたスポット一覧", favorites_path %>
 
-<h3>いいねしたスポット一覧</h3>
-<% @favorite_list.each do |map| %>
-<%= link_to map.spotname, map_path(map.id) %>
+<% if @user == current_user %>
+ <%= link_to "マイページ編集", edit_user_path(@user.id) %>
+
+<%#= link_to "投稿一覧", edit_user_path(@user.id) %>
+<%= link_to "いいねしたスポット一覧", user_favorites_path(@favorite_list) %>
 <% end %>
