--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,7 @@ header {
   width: 100%;
   position: fixed;
   background-color: #fff;
+  z-index: 500;
 
   .header-content {
       text-align: center;
