--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,6 @@
 
 <% if @user == current_user %>
  <%= link_to "マイページ編集", edit_user_path(@user.id) %>
-
-<%#= link_to "投稿一覧", edit_user_path(@user.id) %>
-<%= link_to "いいねしたスポット一覧", user_favorites_path(@favorite_list) %>
 <% end %>
+<%#= link_to "投稿一覧", edit_user_path(@user.id) %>
+<%= link_to "いいねしたスポット一覧", favorites_user_path(@favorite_list, user_id: @user) %>
