--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@ header {
   border-right-width: 5px;
   border-left-width: 5px;
   width: 100%;
+  // height: 300px;
   position: fixed;
   background-color: #fff;
   z-index: 500;
@@ -52,7 +53,7 @@ header {
 
 
 main {
-  padding: 300px 0;
+  padding: 210px 0;
 }
 
 #map {
